--- a/assets/style.css
+++ b/assets/style.css
@@ -90,11 +90,21 @@
     display:flex;
     align-items:center;
     margin-left:25px;
-    border-bottom:5px solid #FFF;
-    transition:all ease 0.5s;
+    position:relative;
 }
-.menu li a:hover {
-    border-bottom:5px solid #133272;
+.menu li a::after {
+    content: "";
+    position:absolute;
+    bottom:0;
+    left:50%;
+    width:0%;
+    height:3px;
+    background:#133272;
+    transition:0.3s ease-out;
+}
+.menu li a:hover::after {
+    left:0%;
+    width:100%;
 }
 
 .banner--principal {
@@ -267,13 +277,13 @@ padding: 50px;
     color:#FFF;
     width:400px;
     padding:20px;
-    background-color:#133272;
+    background-image:linear-gradient(to bottom,#133272,#0f3fa0 , #222d42);
     border:2px solid #0d2350;
     border-radius:5px;
 }
 .fusion,
 .ultra {
-    background-color:#000;
+    background-image:linear-gradient(to bottom, #000,#3a3a3a , #202020);
     border:3px solid #333;
 }
 .product h5 {
@@ -382,10 +392,9 @@ footer a {
 @media (max-width:917px){
     .slideArea {
         width:750px;
-        height:auto;
     }
     .carousel-item img {
-        height:max-content;
+        height:510px;
     }
     .social--media {
         font-size:20px;
@@ -398,10 +407,9 @@ footer a {
     }
     .slideArea {
         width:550px;
-        height:auto;
     }
     .carousel-item img {
-        height:max-content;
+        height:415px;
     }
     .menu li a {
         font-size:15px;
@@ -457,9 +465,10 @@ footer a {
 
     .slideArea {
         width:450px;
-        height:auto;
     }
-
+    .carousel-item img {
+        height:330px;
+    }
 
 
     .services--content {
@@ -496,7 +505,9 @@ footer a {
     }
     .slideArea {
         width:300px;
-        height:auto;
+    }
+    .carousel-item img {
+        height:230px;
     }
     .product {
         width:300px;
